Fixes wrong VarUInt example.

--- a/specification.tex
+++ b/specification.tex
@@ -369,7 +369,8 @@ Integer Value & Byte Sequence \\
        100 & \texttt{64} \\
        127 & \texttt{7F} \\
        128 & \texttt{80 01} \\
-     16383 & \texttt{8F 7F} \\
+     16271 & \texttt{8F 7F} \\
+     16383 & \texttt{FF 7F} \\
      16384 & \texttt{80 80 01} \\
    1048576 & \texttt{80 80 40} \\
    2097151 & \texttt{FF FF 7F} \\
