Fix: Minor nitpick "should" to "must"

--- a/specification.tex
+++ b/specification.tex
@@ -916,7 +916,7 @@ glyph\_offset & \texttt{{[}glyph\_length{]}{[}2{]}Unit} & The start and end offs
 
 This command only provides metadata for accessibility or text selection tools
 for the position and content of text. A renderer can safely ignore this command
-since it should not have any effect on the resulting graphic.
+since it must not have any effect on the resulting graphic.
 
 \hypertarget{stylestyle_type}{\subsection{\texorpdfstring{\texttt{Style(style\_type)}}{Style(style\_type)}}\label{stylestyle_type}}
 
