Fix spelling of coordinate

--- a/specification.tex
+++ b/specification.tex
@@ -1032,7 +1032,7 @@ Index & Instruction & Short Description \\
 \endhead
 0 & line             & A straight line is drawn from the current point to a new point. \\
 1 & horizontal line  & A straight horizontal line is drawn from the current point to a new \texttt{x} coordinate. \\
-2 & vertical line    & A straight vertical line is drawn from the current point to a new \texttt{y} coordiante. \\
+2 & vertical line    & A straight vertical line is drawn from the current point to a new \texttt{y} coordinate. \\
 3 & cubic bezier     & A cubic Bézier curve is drawn from the current point to a new point. \\
 4 & arc circle       & A circle segment is drawn from current point to a new point. \\
 5 & arc ellipse      & An ellipse segment is drawn from current point to a new point. \\
